update travis build-matrix [docs] copyright notice

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     {
       "type": "composer",
       "url": "http://packages.firegento.com"
-    }
+    },
+    {
+      "type": "composer",
+      "url": "http://packages.magento.com"
+    },
   ]
 }
