--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
+dist: trusty
 language: php
 sudo: false
+cache:
+  apt: true
+  directories:
+    - $HOME/.composer/cache
+    - $HOME/.cache/bin
 php:
 - 5.5
 - 5.6
