--- a/app/code/community/Ffuenf/Common/Test/Helper/Data/fixtures/shared.yaml
+++ b/app/code/community/Ffuenf/Common/Test/Helper/Data/fixtures/shared.yaml
@@ -1,2 +1,5 @@
 config:
   default/ffuenf_common/general/enable: 1
+  default/ffuenf_common/log/enable: 1
+  default/ffuenf_common/log/profile: 1
+  default/ffuenf_common/log/exception: 1
